• Media Updates • Added PFP for Nathan and Blitz

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                     <div class="box">
                         <p class="description">asdf</p>
                     </div>
-                    <div class="author"><img class="rounded-circle" src="https://i.postimg.cc/SKjk56pS/ACCA2168-414-D-44-E5-899-C-4-A46073-AF89-D.jpg">
+                    <div class="author"><img class="rounded-circle" src="tommy.jpeg">
                         <h5 class="name">Tommy R.</h5>
                         <p class="title">Director</p>
                     </div>
@@ -58,7 +58,7 @@
                     <div class="box">
                         <p class="description">asdf</p>
                     </div>
-                    <div class="author"><img class="rounded-circle" src="https://i.postimg.cc/wjw90WZ4/3-F3-D49-E4-F300-48-AD-8282-2962-F4-E6-ADE4.jpg">
+                    <div class="author"><img class="rounded-circle" src="casper.jpeg">
                         <h5 class="name">Casper D.</h5>
                         <p class="title">Game Designer</p>
                     </div>
@@ -67,7 +67,7 @@
                     <div class="box">
                         <p class="description">asdf</p>
                     </div>
-                    <div class="author"><img class="rounded-circle" src="https://i.postimg.cc/VNTmcJYj/AAE9401-F-0-A8-A-4669-97-B8-AFD709526513.jpg">
+                    <div class="author"><img class="rounded-circle" src="nate.jpeg">
                         <h5 class="name">Nate JB.</h5>
                         <p class="title">Composer</p>
                     </div>
@@ -76,7 +76,7 @@
                     <div class="box">
                         <p class="description">asdf</p>
                     </div>
-                    <div class="author"><img class="rounded-circle" src="assets/img/nathan.png">
+                    <div class="author"><img class="rounded-circle" src="nathan.jpeg">
                         <h5 class="name">Nathan P.</h5>
                         <p class="title">Lead Developer</p>
                     </div>
@@ -94,7 +94,7 @@
                     <div class="box">
                         <p class="description">asdf</p>
                     </div>
-                    <div class="author"><img class="rounded-circle" src="assets/img/default.png">
+                    <div class="author"><img class="rounded-circle" src="blitz.jpeg">
                         <h5 class="name">Blitz</h5>
                         <p class="title">Gameserver Developer</p>
                     </div>
