--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
             </div>
             <div class="row people">
                 <div class="col-md-6 col-lg-4 item" id="tommydiv">
-                    <div class="box"><img class="rounded-circle" src="https://i.postimg.cc/SKjk56pS/ACCA2168-414-D-44-E5-899-C-4-A46073-AF89-D.jpg">
+                    <div class="box"><img id="tommy1" class="rounded-circle" src="tommy.jpeg" onclick="tommyimage()">
                         <h3 class="name">Tommy R.</h3>
                         <p class="title">director</p>
                         <p class="description" id="tommy">Handles business inquiries and manages projects</p>
-                        <div class="social"><a><i class="fab fa-discord" onclick="tommyfunction()"></i></a><a href="https://twitter.com/fansyboi"><i class="fa fa-twitter" href="https://twitter.com/fansyboi"></i></a><a href="https://www.mc-market.org/members/51242/"><i class="fa fa-cube"></i></a></div>
+                        <div class="social"><a><i class="fab fa-discord" onclick="tommyfunction("></i></a><a href="https://twitter.com/fansyboi"><i class="fa fa-twitter" href="https://twitter.com/fansyboi"></i></a><a href="https://www.mc-market.org/members/51242/"><i class="fa fa-cube"></i></a></div>
                     </div>
                 </div>
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="script.js"></script>
                 <div class="col-md-6 col-lg-4 item">
-                    <div class="box"><img class="rounded-circle" src="https://i.postimg.cc/wjw90WZ4/3-F3-D49-E4-F300-48-AD-8282-2962-F4-E6-ADE4.jpg">
+                    <div class="box"><img class="rounded-circle" src="casper.jpeg">
                         <h3 class="name">Casper S.</h3>
                         <p class="title">Game Designer</p>
                         <p class="description" id="casper">Designs and leads the development of our game library</p>
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 item">
-                    <div class="box"><img class="rounded-circle" src="https://i.postimg.cc/VNTmcJYj/AAE9401-F-0-A8-A-4669-97-B8-AFD709526513.jpg">
+                    <div class="box"><img class="rounded-circle" src="nate.jpeg">
                         <h3 class="name">Nate JB.</h3>
                         <p class="title">composer</p>
                         <p class="description" id="nate">Composes the custom soundtracks for our projects</p>
@@ -82,7 +82,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 item" id="tommydiv">
-                    <div class="box"><img class="rounded-circle" src="assets/img/nathan.png">
+                    <div class="box"><img class="rounded-circle" src="nathan.jpeg">
                         <h3 class="name">Nathan P.</h3>
                         <p class="title">lead developer</p>
                         <p class="description" id="tommy">Manages our development team and handles high priority tasks</p>
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 item">
-                    <div class="box"><img class="rounded-circle" src="assets/img/default.png">
+                    <div class="box"><img class="rounded-circle" src="blitz.jpeg">
                         <h3 class="name">Blitz</h3>
                         <p class="title">Gameserver Developer</p>
                         <p class="description" id="nate">Maintains and manages the development of our gameservers</p>
