* Fixed JS for all team members * Removed duplicate social media links

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <h3 class="name">Tommy R.</h3>
                         <p class="title">director</p>
                         <p class="description" id="tommy">Handles business inquiries and manages projects</p>
-                        <div class="social"><a><i class="fab fa-discord" onclick="tommyfunction("></i></a><a href="https://twitter.com/fansyboi"><i class="fa fa-twitter" href="https://twitter.com/fansyboi"></i></a><a href="https://www.mc-market.org/members/51242/"><i class="fa fa-cube"></i></a></div>
+                        <div class="social"><a><i class="fab fa-discord" onclick="tommyfunction()"></i></a><a href="https://twitter.com/fansyboi"><i class="fa fa-twitter" href="https://twitter.com/fansyboi"></i></a><a href="https://www.mc-market.org/members/51242/"><i class="fa fa-cube"></i></a></div>
                     </div>
                 </div>
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -85,8 +85,8 @@
                     <div class="box"><img class="rounded-circle" src="nathan.jpeg">
                         <h3 class="name">Nathan P.</h3>
                         <p class="title">lead developer</p>
-                        <p class="description" id="tommy">Manages our development team and handles high priority tasks</p>
-                        <div class="social"><a><i class="fab fa-discord" onclick="tommyfunction()"></i></a><a href="https://twitter.com/fansyboi"><i class="fa fa-twitter" href="https://twitter.com/fansyboi"></i></a><a href="https://www.mc-market.org/members/51242/"><i class="fa fa-cube"></i></a></div>
+                        <p class="description" id="nathan">Manages our development team and handles high priority tasks</p>
+                        <div class="social"><a><i class="fab fa-discord" onclick="nathan()"></i></a></div>
                     </div>
                 </div>
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -95,16 +95,16 @@
                     <div class="box"><img class="rounded-circle" src="assets/img/default.png">
                         <h3 class="name">Wardli</h3>
                         <p class="title">Fullstack Developer</p>
-                        <p class="description" id="casper">Works on our software, web projects and client work</p>
-                        <div class="social"><a></a><a><i class="fab fa-discord" onclick="casper()"></i></a><a href="#"></a></div>
+                        <p class="description" id="wardli">Works on our software, web projects and client work</p>
+                        <div class="social"><a></a><a><i class="fab fa-discord" onclick="wardli()"></i></a><a href="#"></a></div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 item">
                     <div class="box"><img class="rounded-circle" src="blitz.jpeg">
                         <h3 class="name">Blitz</h3>
                         <p class="title">Gameserver Developer</p>
-                        <p class="description" id="nate">Maintains and manages the development of our gameservers</p>
-                        <div class="social"><a></a><a><i class="fab fa-discord" onclick="nate()"></i></a><a href="#"></a></div>
+                        <p class="description" id="blitz">Maintains and manages the development of our gameservers</p>
+                        <div class="social"><a></a><a><i class="fab fa-discord" onclick="blitz()"></i></a><a href="#"></a></div>
                     </div>
                 </div>
             </div>
