--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <div>
-        <nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
+        <nav class="navbar navbar-dark navbar-expand-md navigation-clean-button">
             <div class="container"><a class="navbar-brand" href="#">Electra Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse"
                     id="navcol-1">
