--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="box"><img id="tommy1" class="rounded-circle" src="tommy.jpeg" onclick="tommyimage()">
                         <h3 class="name">Tommy R.</h3>
                         <p class="title">director</p>
-                        <p class="description" id="tommy">Handles business inquiries and manages projects</p>
+                        <p class="description" id="tommy">Handles projects and marketing</p>
                         <div class="social"><a><i class="fab fa-discord" onclick="tommyfunction()"></i></a><a href="https://twitter.com/fansyboi"><i class="fa fa-twitter" href="https://twitter.com/fansyboi"></i></a><a href="https://www.mc-market.org/members/51242/"><i class="fa fa-cube"></i></a></div>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                     <div class="box"><img class="rounded-circle" src="casper.jpeg">
                         <h3 class="name">Casper S.</h3>
                         <p class="title">Game Designer</p>
-                        <p class="description" id="casper">Designs and leads the development of our game library</p>
+                        <p class="description" id="casper">Designs and codes our games</p>
                         <div class="social"><a></a><a><i class="fab fa-discord" onclick="casper()"></i></a><a href="#"></a></div>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                     <div class="box"><img class="rounded-circle" src="nate.jpeg">
                         <h3 class="name">Nate JB.</h3>
                         <p class="title">composer</p>
-                        <p class="description" id="nate">Composes the custom soundtracks for our projects</p>
+                        <p class="description" id="nate">Composes our soundtracks</p>
                         <div class="social"><a></a><a><i class="fab fa-discord" onclick="nate()"></i></a><a href="#"></a></div>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                     <div class="box"><img class="rounded-circle" src="nathan.jpeg">
                         <h3 class="name">Nathan P.</h3>
                         <p class="title">lead developer</p>
-                        <p class="description" id="nathan">Manages our development team and handles high priority tasks</p>
+                        <p class="description" id="nathan">Manages our development team</p>
                         <div class="social"><a><i class="fab fa-discord" onclick="nathan()"></i></a></div>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                     <div class="box"><img class="rounded-circle" src="assets/img/default.png">
                         <h3 class="name">Wardli</h3>
                         <p class="title">Fullstack Developer</p>
-                        <p class="description" id="wardli">Works on our software, web projects and client work</p>
+                        <p class="description" id="wardli">Works on our client work</p>
                         <div class="social"><a></a><a><i class="fab fa-discord" onclick="wardli()"></i></a><a href="#"></a></div>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                     <div class="box"><img class="rounded-circle" src="blitz.jpeg">
                         <h3 class="name">Blitz</h3>
                         <p class="title">Gameserver Developer</p>
-                        <p class="description" id="blitz">Maintains and manages the development of our gameservers</p>
+                        <p class="description" id="blitz">Maintains our gameservers</p>
                         <div class="social"><a></a><a><i class="fab fa-discord" onclick="blitz()"></i></a><a href="#"></a></div>
                     </div>
                 </div>
