--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="box"><img class="rounded-circle" src="assets/img/default.png">
                         <h3 class="name">Wardli</h3>
                         <p class="title">Fullstack Developer</p>
-                        <p class="description" id="wardli">Works on our client work</p>
+                        <p class="description" id="wardli">Works on our client projects</p>
                         <div class="social"><a></a><a><i class="fab fa-discord" onclick="wardli()"></i></a><a href="#"></a></div>
                     </div>
                 </div>
